Add Swagger URL printer and improve API documentation configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/hd_chat?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: xy666666
+    password: 123456
     hikari:
       minimum-idle: 5
       maximum-pool-size: 20
@@ -27,7 +27,7 @@ spring:
   # Redis Configuration
   redis:
     host: localhost
-    port: 6380
+    port: 6379
     database: 0
     timeout: 10000
     lettuce:
@@ -81,6 +81,38 @@ jwt:
   expiration: 86400 # 24 hours in seconds
   header: Authorization
   token-prefix: Bearer 
+
+# MinIO Configuration
+minio:
+  endpoint: http://localhost:9000
+  accessKey: minioadmin
+  secretKey: minioadmin
+  bucketName: hd-chat
+
+# Logging Configuration
+logging:
+  level:
+    com.xingyang.chat: debug
+    org.springframework.web: info
+    org.springframework.security: info
+
+# Knife4j API Documentation
+knife4j:
+  enable: true
+  setting:
+    language: en-US
+    enable-swagger-models: true
+    enable-document-manage: true
+    swagger-model-name: Models
+    enable-version: false
+    enable-footer: false
+    enable-footer-custom: false
+    enable-request-cache: true
+    enable-host: false
+    enable-host-text: http://localhost:8080
+    enable-debug: true
+    enable-filter-multipart-api-method-type: POST
+    enable-after-script: true
 
 # MinIO Configuration
 minio:
