--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
         
+        <!-- Email -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
