--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,25 @@
             <artifactId>kaptcha</artifactId>
             <version>2.3.2</version>
         </dependency>
+
+        <!-- LangChain4j -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j</artifactId>
+            <version>0.27.1</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-open-ai</artifactId>
+            <version>0.27.1</version>
+        </dependency>
+        
+        <!-- 阿里云API SDK -->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dashscope-sdk-java</artifactId>
+            <version>2.2.5</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
