--- a/pom.xml
+++ b/pom.xml
@@ -165,19 +165,23 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
-            <version>0.27.1</version>
+            <version>0.29.1</version>
         </dependency>
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-open-ai</artifactId>
-            <version>0.27.1</version>
+            <version>0.29.1</version>
         </dependency>
         
-        <!-- 阿里云API SDK -->
+        <!-- Alibaba DashScope SDK -->
         <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>dashscope-sdk-java</artifactId>
-            <version>2.2.5</version>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 
@@ -192,6 +196,25 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <repositories>
+        <!-- Alibaba Cloud Maven Repository -->
+        <repository>
+            <id>alicloud-public</id>
+            <name>Alibaba Cloud Public Repository</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
