--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+        <!-- Hutool工具库 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-captcha</artifactId>
+            <version>5.8.25</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
